Fix concept select in file import off center in firefox. #28

--- a/web/war/src/main/webapp/less/util/popovers/fileImport.less
+++ b/web/war/src/main/webapp/less/util/popovers/fileImport.less
@@ -23,6 +23,10 @@
     color: #888;
   }
 
+  .concept-container {
+    clear: left;
+  }
+
   .errors button {
     display: none;
   }
